# Nokia-Summer-Trainee

./: .gitignore  README.md
patterns/adapter/: CMakeLists.txt
patterns/adapter/include/: adapter.h  adapter.hpp
patterns/adapter/src/: adapter.cpp  main.cpp
patterns/iterator/: CMakeLists.txt  iterator.cpp  iterator.h  main.cpp
patterns/iterator/src/: iterator.cpp  main.cpp
patterns/observer/: CMakeLists.txt
patterns/observer/include/: calculate.h  data.h  observe.h  subject.h
patterns/observer/src/: calculate.cpp  data.cpp  main.cpp  subject.cpp
stl/: a  main.cpp
stl/RPN_calculator/: CMakeLists.txt  main.cpp
stl/RPN_calculator/calc/: calc.cpp
stl/RPN_calculator/include/: calc.h  calc.hpp  utils.h
stl/RPN_calculator/src/: calc.cpp  main.cpp  utils.cpp
stl/RPN_calculator/utils/: utils.cpp
stl/calc/: calc  calc.cpp
stl/dijkstra/src/: graph.cpp  main.cpp
stl/split/: main.cpp
test/Example/: CMakeLists.txt  Example.cpp  Example.hpp
test/Example/test/: CMakeLists.txt  ExampleTests.cpp
test/RPN_calculator/: CMakeLists.txt
test/RPN_calculator/include/: calc.hpp  utils.hpp
test/RPN_calculator/src/: main.cpp  utils.cpp
test/RPN_calculator/test/: CMakeLists.txt  calc_test.cpp
test/dijkstra/: CMakeLists.txt
test/dijkstra/include/: graph.h  graph.hpp
test/dijkstra/test/: CMakeLists.txt  dijkstra_test.cpp
